--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand",
-    "build": "tsc",
-    "vercel-build": "echo 'hello'"
+    "start": "npx nodemon src/index.ts",
+    "dev": "npx nodemon src/index.ts",
+    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../frontend && npm run build && @powershell Copy-Item -Recurse dist ../backend",
+    "lint": "eslint .",
+    "test": "jest --runInBand"
   },
   "jest": {
     "transform": {
@@ -19,10 +21,12 @@
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.13.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "ts-node-dev": "^2.0.0",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
