--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  "include": ["api/*.ts", "src/**/*"],
-  "exclude": ["node_modules/*"],
   "compilerOptions": {
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "sourceMap": true,
-    "target": "esnext",
     "module": "commonjs",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES6",
     "noImplicitAny": true,
-    "strict": true,
-    "skipLibCheck": true
-  }
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
+  },
+  "include": ["./src/**/*"]
 }
