--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/index.ts",
+    "start": "node ./dist/index.js",
     "dev": "npx nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint .",
