--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "npx nodemon src/index.ts",
-    "build": "tsc",
+    "start": "nodemon src/index.ts",
     "lint": "eslint .",
     "test": "jest --runInBand"
   },
