--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "lint": "eslint .",
-    "test": "jest --runInBand"
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "jest": {
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
@@ -39,7 +46,9 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "pre-commit": "^1.2.2",
     "prisma": "^6.3.0",
+    "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
